k8s/home-assistant/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: home-assistant-route
  namespace: home-assistant
spec:
  parentRefs:
    - name: private
      namespace: envoy-gateway-system
  hostnames:
    - "ha.neffi.fr"
  rules:
    - backendRefs:
        - name: home-assistant
          port: 8080
      matches:
        - path:
            type: PathPrefix
            value: /
